classDiagram
    direction LR

    class FiniteStateMachine {
        +currentState: State
        +transitions: List~Transition~
        +dispatch(event: Event)
        +addTransition(transition: Transition)
        +enterInitialState()
    }

    class State {
        +id: String
        +entryAction: Action
        +exitAction: Action
        +enter()
        +exit()
    }

    class Event {
        +name: String
        +payload: Map
        +getName()
        +getPayload()
    }

    class Guard {
        <<interface>>
        +check() : boolean
    }

    class Action {
        <<interface>>
        +execute()
    }

    class Trigger {
        +fromState: State
        +event: Event
        +guard: Guard
        +transition: Transition
        +match(event: Event, state: State) : boolean
        +fire()
    }

    class Transition {
        +from: State
        +to: State
        +event: Event
        +guard: Guard
        +action: Action
        +canTrigger(event: Event) : boolean
        +execute()
    }

    FiniteStateMachine --> State
    FiniteStateMachine --> Transition
    FiniteStateMachine --> Trigger
    FiniteStateMachine ..> Event

    Trigger --> Event
    Trigger --> State
    Trigger --> Guard
    Trigger --> Transition

    Transition --> State
    Transition --> Event
    Transition --> Guard
    Transition --> Action

    State --> Action
